--- a/udacity-c3-restapi-user/package.json
+++ b/udacity-c3-restapi-user/package.json
@@ -16,16 +16,20 @@
   "author": "Gabriel Ruttner",
   "license": "ISC",
   "dependencies": {
+    "@angular/compiler": "^8.2.14",
+    "@angular/core": "^8.2.14",
     "@types/bcrypt": "^3.0.0",
     "@types/jsonwebtoken": "^8.3.2",
     "aws-sdk": "^2.429.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
+    "codelyzer": "^5.2.1",
     "email-validator": "^2.0.4",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.1",
     "pg": "^7.9.0",
     "reflect-metadata": "^0.1.13",
+    "rxjs": "^6.5.4",
     "sequelize": "^5.21.3",
     "sequelize-typescript": "^0.6.9"
   },
