--- a/udacity-c3-deployment/docker/docker-compose.yaml
+++ b/udacity-c3-deployment/docker/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   reverseproxy:
-      image: scheele/reverseproxy
+      image: borasmus/reverseproxy
       ports:
           - 8080:8080
       restart: always
@@ -9,32 +9,16 @@ services:
         - backend-user
         - backend-feed     
   backend-user:
-    image: scheele/udacity-restapi-user
-    environment:
-      POSTGRESS_USERNAME: $POSTGRESS_USERNAME
-      POSTGRESS_PASSWORD: $POSTGRESS_PASSWORD 
-      POSTGRESS_DB: $POSTGRESS_DB 
-      POSTGRESS_HOST: $POSTGRESS_HOST 
-      AWS_REGION: $AWS_REGION 
-      AWS_PROFILE: $AWS_PROFILE 
-      AWS_BUCKET: $AWS_BUCKET
-      JWT_SECRET: $JWT_SECRET
-      URL: "http://localhost:8100"
+    image: borasmus/udacity-c3-restapi-user
+    env_file:
+      - $HOME/.profile.env
   backend-feed:
-    image: scheele/udacity-restapi-feed
+    image: borasmus/udacity-c3-restapi-feed
     volumes:
       - $HOME/.aws:/root/.aws
-    environment:
-      POSTGRESS_USERNAME: $POSTGRESS_USERNAME
-      POSTGRESS_PASSWORD: $POSTGRESS_PASSWORD 
-      POSTGRESS_DB: $POSTGRESS_DB 
-      POSTGRESS_HOST: $POSTGRESS_HOST 
-      AWS_REGION: $AWS_REGION 
-      AWS_PROFILE: $AWS_PROFILE 
-      AWS_BUCKET: $AWS_BUCKET
-      JWT_SECRET: $JWT_SECRET
-      URL: "http://localhost:8100"
+    env_file:
+      - $HOME/.profile.env
   frontend:
-    image: scheele/udacity-frontend:local
+    image: borasmus/udacity-c3-frontend:local
     ports:
       - "8100:80"
