--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,15 @@ before_install:
   - chmod +x ./kubectl
   - sudo mv ./kubectl /usr/local/bin/kubectl
 
-
-
 install:
   - docker-compose -f udacity-c3-deployment/docker/docker-compose-build.yaml build --parallel
+
+deploy:
+  - provider: script
+    script: bash udacity-c3-deployment/docker/publish.sh
+    on:
+      branch: master
+  - provider: script
+    script: bash udacity-c3-deployment/k8s/deploy.sh
+    on:
+      branch: master
