--- a/udacity-c3-deployment/k8s/deployment/frontend-deployment.yaml
+++ b/udacity-c3-deployment/k8s/deployment/frontend-deployment.yaml
@@ -1,29 +1,32 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    service: reverseproxy
-  name: reverseproxy
+    service: frontend
+  name: frontend
 spec:
   replicas: 2
+  selector:
+    matchLabels:
+      service: frontend
   template:
     metadata:
       labels:
-        service: reverseproxy
+        service: frontend
+        api: external        
     spec:
       containers:
-      - image: scheele/reverseproxy
-        name: reverseproxy
+      - image: borasmus/udacity-c3-frontend:local
+        name: frontend
         imagePullPolicy: Always          
+        ports:
+        - containerPort: 80
         resources:
           requests:
             memory: "64Mi"
             cpu: "250m"
           limits:
             memory: "1024Mi"
-            cpu: "500m"       
-        ports:
-        - containerPort: 8080
+            cpu: "500m"                
       restartPolicy: Always
-
 
